--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     *{
       font-family: 'Roboto', sans-serif;
       margin: 0;
-      overflow-x: hidden;
+      overflow-x: hidden; /* handle any overflow created by the nested container (sections) */
     }
   </style>
   <title>My Portfolio</title>
