few changes for prod build

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       overflow-x: hidden; /* handle any overflow created by the nested container (sections) */
     }
   </style>
-  <title>My Portfolio</title>
+  <title>Katherine Richards Portfolio</title>
 </head>
 
 <body>
